add basic module support